--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
                 <!-- Model C Parameters (if needed) -->
                 <div id="modelCParameters" style="display: none;">
                 <button id="addButton">+</button>
-                <button id="removeButton">-</button>
-                    <button id="test_button">test</button>
+                <button id="removeButton">-</button><br><br>
+<!--                    <button id="test_button">test</button>-->
                     <script>
                     let counter = 0, buyPercentages = [], sellPercentages = [];
 
@@ -503,6 +503,8 @@
                                 <input type="number" id="buy-${counter}" class="moduleC_input-box" value="10" min="5" max="95" step="5">
                                 <label>Sell (%):</label>
                                 <input type="number" id="sell-${counter}" class="moduleC_input-box" value="3" min="1" max="10" step="1">
+                                <label>${counter*buyThresholdSlider.value}%</label>
+                                <br><br>
                             </div>
                         `);
                             $(`#buy-${counter}`).on('input', function() {
@@ -578,9 +580,9 @@
     </div>
     
     <script>
-        $('#test_button').click(function() {
-            console.log(buyPercentages,sellPercentages)
-        });
+        // $('#test_button').click(function() {
+        //     console.log(buyPercentages,sellPercentages)
+        // });
 
         let stockData = [];
         let ndxStockData = [];
@@ -1337,7 +1339,7 @@
 
             // Define a function to generate colors based on the threshold
             function generateColor(threshold) {
-                const hue = Math.round((threshold / 20) * 240); // Generates a color based on the threshold
+                const hue = Math.round((threshold / 50) * 240); // Generates a color based on the threshold
                 return `hsl(${hue}, 100%, 50%)`; // Return an HSL color
             }
 
