Hide default sliders on modelC

--- a/index.html
+++ b/index.html
@@ -813,6 +813,7 @@
                 document.getElementById(model).classList.add('active');
 
                 if (model === 'modelCIcon') {
+                    document.getElementById('defaultSliders').classList.add('hidden');
                     document.getElementById('modelCParameters').style.display = 'block';
                     document.getElementById('Title_model_c').style.display = 'block';
                     document.getElementById('div_buyThresholdValue').style.display = 'none';
